--- a/ERPWeb/Web.config
+++ b/ERPWeb/Web.config
@@ -103,6 +103,8 @@
     
     <!--Live PC Connection-->
     <add name="ControlPanel" connectionString="Data Source=103.108.140.210; Initial Catalog=ControlPanelAgro; Integrated Security =false; User ID=admin;Password=PlayOn24@20!9BD;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+
+    <add name="Agriculture" connectionString="Data Source=103.108.140.210; Initial Catalog=Agriculture; Integrated Security =false; User ID=admin;Password=PlayOn24@20!9BD;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
     <!--<add name="Inventory" connectionString="Data Source=103.108.140.210; Initial Catalog=Inventory; Integrated Security =false; User ID=admin;Password=PlayOn24@20!9BD;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
     <add name="Production" connectionString="Data Source=103.108.140.210; Initial Catalog=Production; Integrated Security =false; User ID=admin;Password=PlayOn24@20!9BD;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
     <add name="FrontDesk" connectionString="Data Source=103.108.140.210; Initial Catalog=FrontDesk; Integrated Security =false; User ID=admin;Password=PlayOn24@20!9BD;  Connect Timeout=1000;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
