--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -86,6 +86,10 @@
     <Compile Include="AgricultureContextMigrations\202209121335506_Agriculture_null.Designer.cs">
       <DependentUpon>202209121335506_Agriculture_null.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202209130846339_Agriculture_entryUseridNull.cs" />
+    <Compile Include="AgricultureContextMigrations\202209130846339_Agriculture_entryUseridNull.Designer.cs">
+      <DependentUpon>202209130846339_Agriculture_entryUseridNull.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -122,6 +126,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202209121335506_Agriculture_null.resx">
       <DependentUpon>202209121335506_Agriculture_null.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202209130846339_Agriculture_entryUseridNull.resx">
+      <DependentUpon>202209130846339_Agriculture_entryUseridNull.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
