--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -446,6 +446,8 @@
     <Content Include="Views\AgroConfiguration\GetRawMaterial.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetRawMaterial.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetDepotPartialView.cshtml" />
+    <Content Include="Views\AgroConfiguration\GetFinishGoodProduct.cshtml" />
+    <Content Include="Views\AgroConfiguration\_GetFinishGoodProductPartialView.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
