Agro Menu Config

--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -449,6 +449,9 @@
     <Content Include="Views\AgroConfiguration\GetFinishGoodProduct.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetFinishGoodProductPartialView.cshtml" />
     <Content Include="Views\AgroConfiguration\GetRawMaterialSupplier.cshtml" />
+    <Content Include="Views\AgroConfiguration\GetFinishGoodProductSupplierList.cshtml" />
+    <Content Include="Views\AgroConfiguration\GetMeasurementList.cshtml" />
+    <Content Include="Views\AgroConfiguration\GetBankList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
