--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -98,6 +98,10 @@
     <Compile Include="AgricultureContextMigrations\202209131127549_Agriculture_Depo FinishProducts.Designer.cs">
       <DependentUpon>202209131127549_Agriculture_Depo FinishProducts.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202209140648351_Agriculture_BankSetup.cs" />
+    <Compile Include="AgricultureContextMigrations\202209140648351_Agriculture_BankSetup.Designer.cs">
+      <DependentUpon>202209140648351_Agriculture_BankSetup.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -143,6 +147,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202209131127549_Agriculture_Depo FinishProducts.resx">
       <DependentUpon>202209131127549_Agriculture_Depo FinishProducts.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202209140648351_Agriculture_BankSetup.resx">
+      <DependentUpon>202209140648351_Agriculture_BankSetup.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
