--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -106,6 +106,10 @@
     <Compile Include="AgricultureContextMigrations\202209140828412_Agriculture_BankMigration.Designer.cs">
       <DependentUpon>202209140828412_Agriculture_BankMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202209141009085_Agriculture_BankUpdateAccountNumber.cs" />
+    <Compile Include="AgricultureContextMigrations\202209141009085_Agriculture_BankUpdateAccountNumber.Designer.cs">
+      <DependentUpon>202209141009085_Agriculture_BankUpdateAccountNumber.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -157,6 +161,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202209140828412_Agriculture_BankMigration.resx">
       <DependentUpon>202209140828412_Agriculture_BankMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202209141009085_Agriculture_BankUpdateAccountNumber.resx">
+      <DependentUpon>202209141009085_Agriculture_BankUpdateAccountNumber.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
