--- a/ERPBLL/ERPBLL.csproj
+++ b/ERPBLL/ERPBLL.csproj
@@ -101,8 +101,10 @@
   <ItemGroup>
     <Compile Include="Agriculture\BankSetupBusiness.cs" />
     <Compile Include="Agriculture\FinishGoodProductBusiness.cs" />
+    <Compile Include="Agriculture\FinishGoodProductSupplierBusiness.cs" />
     <Compile Include="Agriculture\Interface\IBankSetup.cs" />
     <Compile Include="Agriculture\Interface\IFinishGoodProductBusiness.cs" />
+    <Compile Include="Agriculture\Interface\IFinishGoodProductSupplierBusiness.cs" />
     <Compile Include="Agriculture\Interface\IRawMaterialBusiness.cs" />
     <Compile Include="Agriculture\RawMaterialBusiness.cs" />
     <Compile Include="Common\Status.cs" />
