--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -452,6 +452,7 @@
     <Content Include="Views\AgroConfiguration\GetFinishGoodProductSupplierList.cshtml" />
     <Content Include="Views\AgroConfiguration\GetMeasurementList.cshtml" />
     <Content Include="Views\AgroConfiguration\GetBankList.cshtml" />
+    <Content Include="Views\AgroConfiguration\_GetFinishGoodProductSupplierPartialView.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
