--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -115,6 +115,10 @@
       <DependentUpon>202209141233027_Agriculture_Depo FinishGoodSuppliersseee.cs</DependentUpon>
 
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202209141314554_Agriculture_aftermarg.cs" />
+    <Compile Include="AgricultureContextMigrations\202209141314554_Agriculture_aftermarg.Designer.cs">
+      <DependentUpon>202209141314554_Agriculture_aftermarg.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -176,6 +180,9 @@
     <EmbeddedResource Include="AgricultureContextMigrations\202209141233027_Agriculture_Depo FinishGoodSuppliersseee.resx">
       <DependentUpon>202209141233027_Agriculture_Depo FinishGoodSuppliersseee.cs</DependentUpon>
 
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202209141314554_Agriculture_aftermarg.resx">
+      <DependentUpon>202209141314554_Agriculture_aftermarg.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
