--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -113,11 +113,14 @@
     <Compile Include="AgricultureContextMigrations\202209141233027_Agriculture_Depo FinishGoodSuppliersseee.cs" />
     <Compile Include="AgricultureContextMigrations\202209141233027_Agriculture_Depo FinishGoodSuppliersseee.Designer.cs">
       <DependentUpon>202209141233027_Agriculture_Depo FinishGoodSuppliersseee.cs</DependentUpon>
-
     </Compile>
     <Compile Include="AgricultureContextMigrations\202209141314554_Agriculture_aftermarg.cs" />
     <Compile Include="AgricultureContextMigrations\202209141314554_Agriculture_aftermarg.Designer.cs">
       <DependentUpon>202209141314554_Agriculture_aftermarg.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AgricultureContextMigrations\202209150444247_Agriculture_tblMeasurement.cs" />
+    <Compile Include="AgricultureContextMigrations\202209150444247_Agriculture_tblMeasurement.Designer.cs">
+      <DependentUpon>202209150444247_Agriculture_tblMeasurement.cs</DependentUpon>
     </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
@@ -174,15 +177,14 @@
     <EmbeddedResource Include="AgricultureContextMigrations\202209141009085_Agriculture_BankUpdateAccountNumber.resx">
       <DependentUpon>202209141009085_Agriculture_BankUpdateAccountNumber.cs</DependentUpon>
     </EmbeddedResource>
-
-
-
     <EmbeddedResource Include="AgricultureContextMigrations\202209141233027_Agriculture_Depo FinishGoodSuppliersseee.resx">
       <DependentUpon>202209141233027_Agriculture_Depo FinishGoodSuppliersseee.cs</DependentUpon>
-
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202209141314554_Agriculture_aftermarg.resx">
       <DependentUpon>202209141314554_Agriculture_aftermarg.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202209150444247_Agriculture_tblMeasurement.resx">
+      <DependentUpon>202209150444247_Agriculture_tblMeasurement.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
