--- a/ERPBLL/ERPBLL.csproj
+++ b/ERPBLL/ERPBLL.csproj
@@ -108,7 +108,9 @@
     <Compile Include="Agriculture\Interface\IMeasuremenBusiness.cs" />
     <Compile Include="Agriculture\Interface\IRawMaterialBusiness.cs" />
     <Compile Include="Agriculture\MeasuremenBusiness.cs" />
+    <Compile Include="Agriculture\Interface\IRawMaterialSupplier.cs" />
     <Compile Include="Agriculture\RawMaterialBusiness.cs" />
+    <Compile Include="Agriculture\RawMaterialSupplierBusiness.cs" />
     <Compile Include="Common\Status.cs" />
     <Compile Include="Common\Utility.cs" />
     <Compile Include="ControlPanel\AppUserBusiness.cs" />
