--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -122,6 +122,10 @@
     <Compile Include="AgricultureContextMigrations\202209150444247_Agriculture_tblMeasurement.Designer.cs">
       <DependentUpon>202209150444247_Agriculture_tblMeasurement.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202209150906366_Agriculture_RawMaterialSupplier.cs" />
+    <Compile Include="AgricultureContextMigrations\202209150906366_Agriculture_RawMaterialSupplier.Designer.cs">
+      <DependentUpon>202209150906366_Agriculture_RawMaterialSupplier.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -185,6 +189,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202209150444247_Agriculture_tblMeasurement.resx">
       <DependentUpon>202209150444247_Agriculture_tblMeasurement.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202209150906366_Agriculture_RawMaterialSupplier.resx">
+      <DependentUpon>202209150906366_Agriculture_RawMaterialSupplier.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
