--- a/ERPBLL/ERPBLL.csproj
+++ b/ERPBLL/ERPBLL.csproj
@@ -107,9 +107,13 @@
     <Compile Include="Agriculture\Interface\IFinishGoodProductSupplierBusiness.cs" />
     <Compile Include="Agriculture\Interface\IMeasuremenBusiness.cs" />
     <Compile Include="Agriculture\Interface\IRawMaterialBusiness.cs" />
+    <Compile Include="Agriculture\Interface\IRawMaterialStockDetail.cs" />
+    <Compile Include="Agriculture\Interface\IRawMaterialStockInfo.cs" />
     <Compile Include="Agriculture\MeasuremenBusiness.cs" />
     <Compile Include="Agriculture\Interface\IRawMaterialSupplier.cs" />
     <Compile Include="Agriculture\RawMaterialBusiness.cs" />
+    <Compile Include="Agriculture\RawMaterialStockDetailBusiness.cs" />
+    <Compile Include="Agriculture\RawMaterialStockInfoBusiness.cs" />
     <Compile Include="Agriculture\RawMaterialSupplierBusiness.cs" />
     <Compile Include="Common\Status.cs" />
     <Compile Include="Common\Utility.cs" />
