--- a/ERPBO/ERPBO.csproj
+++ b/ERPBO/ERPBO.csproj
@@ -74,6 +74,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Agriculture\DomainModels\RawMaterialStock.cs" />
+    <Compile Include="Agriculture\DomainModels\RawMaterialStockDetail.cs" />
+    <Compile Include="Agriculture\DTOModels\RawMaterialStockDetailDTO.cs" />
+    <Compile Include="Agriculture\DTOModels\RawMaterialStockDTO.cs" />
+    <Compile Include="Agriculture\ViewModels\RawMaterialStockDetailViewModel.cs" />
+    <Compile Include="Agriculture\ViewModels\RawMaterialStockViewModel.cs" />
     <Compile Include="Common\DailySellsChart.cs" />
     <Compile Include="Common\DayAndModelWiseProductionChart.cs" />
     <Compile Include="Common\DaysAndLineWiseProductionChart.cs" />
