Finish Good Receip

--- a/ERPBLL/ERPBLL.csproj
+++ b/ERPBLL/ERPBLL.csproj
@@ -102,9 +102,13 @@
     <Compile Include="Agriculture\BankSetupBusiness.cs" />
     <Compile Include="Agriculture\FinishGoodProductBusiness.cs" />
     <Compile Include="Agriculture\FinishGoodProductSupplierBusiness.cs" />
+    <Compile Include="Agriculture\FinishGoodRecipeDetailsBusiness.cs" />
+    <Compile Include="Agriculture\FinishGoodRecipeInfoBusiness.cs" />
     <Compile Include="Agriculture\Interface\IBankSetup.cs" />
     <Compile Include="Agriculture\Interface\IFinishGoodProductBusiness.cs" />
     <Compile Include="Agriculture\Interface\IFinishGoodProductSupplierBusiness.cs" />
+    <Compile Include="Agriculture\Interface\IFinishGoodRecipeDetailsBusiness.cs" />
+    <Compile Include="Agriculture\Interface\IFinishGoodRecipeInfoBusiness.cs" />
     <Compile Include="Agriculture\Interface\IMeasuremenBusiness.cs" />
     <Compile Include="Agriculture\Interface\IRawMaterialBusiness.cs" />
     <Compile Include="Agriculture\Interface\IRawMaterialStockDetail.cs" />
