--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -457,6 +457,7 @@
     <Content Include="Views\AgroConfiguration\_GetRawMaterialSupplierPartialView.cshtml" />
     <Content Include="Views\AgroConfiguration\FinishGoodRecipe.cshtml" />
     <Content Include="Views\AgroConfiguration\CreateFinishGoodRecipe.cshtml" />
+    <Content Include="Views\AgroConfiguration\GetRawMaterialStock.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
