--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -458,15 +458,14 @@
     <Content Include="Views\AgroConfiguration\FinishGoodRecipe.cshtml" />
     <Content Include="Views\AgroConfiguration\CreateFinishGoodRecipe.cshtml" />
     <Content Include="Views\AgroConfiguration\GetRawMaterialStock.cshtml" />
-
     <Content Include="Views\AgroConfiguration\GetFinishGoodRecipeList.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetFinishGoodRecipeList.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetFinishGoodRecipeDetail.cshtml" />
     <Content Include="Views\AgroConfiguration\_GetFinishGoodRecipeEdit.cshtml" />
     <Content Include="Views\AgroConfiguration\CreateRawMaterialStock.cshtml" />
-
     <Content Include="Views\AgroConfiguration\_GetMeasurementList.cshtml" />
-
+    <Content Include="Views\AgroConfiguration\GetRawMaterialIssueStock.cshtml" />
+    <Content Include="Views\AgroConfiguration\GetProductFinishGoodList.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
