--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -130,6 +130,10 @@
     <Compile Include="AgricultureContextMigrations\202209180644020_Agriculture_RawMaterialStockInfoandDetail.Designer.cs">
       <DependentUpon>202209180644020_Agriculture_RawMaterialStockInfoandDetail.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202209221340490_Agriculture_RawMaterialStockaddExpireDate.cs" />
+    <Compile Include="AgricultureContextMigrations\202209221340490_Agriculture_RawMaterialStockaddExpireDate.Designer.cs">
+      <DependentUpon>202209221340490_Agriculture_RawMaterialStockaddExpireDate.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -199,6 +203,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202209180644020_Agriculture_RawMaterialStockInfoandDetail.resx">
       <DependentUpon>202209180644020_Agriculture_RawMaterialStockInfoandDetail.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202209221340490_Agriculture_RawMaterialStockaddExpireDate.resx">
+      <DependentUpon>202209221340490_Agriculture_RawMaterialStockaddExpireDate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
