--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -142,15 +142,15 @@
     <Compile Include="AgricultureContextMigrations\202209240815192_Agriculture_RawMaterialStocDetailkExpireDate.Designer.cs">
       <DependentUpon>202209240815192_Agriculture_RawMaterialStocDetailkExpireDate.cs</DependentUpon>
     </Compile>
-<<<<<<< Updated upstream
+
     <Compile Include="AgricultureContextMigrations\202209241120599_Agriculture_RawMaterialStockAddSupplierId.cs" />
     <Compile Include="AgricultureContextMigrations\202209241120599_Agriculture_RawMaterialStockAddSupplierId.Designer.cs">
       <DependentUpon>202209241120599_Agriculture_RawMaterialStockAddSupplierId.cs</DependentUpon>
-=======
+    </Compile>
     <Compile Include="AgricultureContextMigrations\202209240824173_Agriculture_tblRawMaterialIssueStockInfo.cs" />
     <Compile Include="AgricultureContextMigrations\202209240824173_Agriculture_tblRawMaterialIssueStockInfo.Designer.cs">
       <DependentUpon>202209240824173_Agriculture_tblRawMaterialIssueStockInfo.cs</DependentUpon>
->>>>>>> Stashed changes
+
     </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
@@ -231,13 +231,13 @@
     <EmbeddedResource Include="AgricultureContextMigrations\202209240815192_Agriculture_RawMaterialStocDetailkExpireDate.resx">
       <DependentUpon>202209240815192_Agriculture_RawMaterialStocDetailkExpireDate.cs</DependentUpon>
     </EmbeddedResource>
-<<<<<<< Updated upstream
+
     <EmbeddedResource Include="AgricultureContextMigrations\202209241120599_Agriculture_RawMaterialStockAddSupplierId.resx">
       <DependentUpon>202209241120599_Agriculture_RawMaterialStockAddSupplierId.cs</DependentUpon>
-=======
+ </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202209240824173_Agriculture_tblRawMaterialIssueStockInfo.resx">
       <DependentUpon>202209240824173_Agriculture_tblRawMaterialIssueStockInfo.cs</DependentUpon>
->>>>>>> Stashed changes
+
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
