--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -142,7 +142,6 @@
     <Compile Include="AgricultureContextMigrations\202209240815192_Agriculture_RawMaterialStocDetailkExpireDate.Designer.cs">
       <DependentUpon>202209240815192_Agriculture_RawMaterialStocDetailkExpireDate.cs</DependentUpon>
     </Compile>
-
     <Compile Include="AgricultureContextMigrations\202209241120599_Agriculture_RawMaterialStockAddSupplierId.cs" />
     <Compile Include="AgricultureContextMigrations\202209241120599_Agriculture_RawMaterialStockAddSupplierId.Designer.cs">
       <DependentUpon>202209241120599_Agriculture_RawMaterialStockAddSupplierId.cs</DependentUpon>
@@ -150,7 +149,10 @@
     <Compile Include="AgricultureContextMigrations\202209240824173_Agriculture_tblRawMaterialIssueStockInfo.cs" />
     <Compile Include="AgricultureContextMigrations\202209240824173_Agriculture_tblRawMaterialIssueStockInfo.Designer.cs">
       <DependentUpon>202209240824173_Agriculture_tblRawMaterialIssueStockInfo.cs</DependentUpon>
-
+    </Compile>
+    <Compile Include="AgricultureContextMigrations\202209241220559_Agriculture_rffgg.cs" />
+    <Compile Include="AgricultureContextMigrations\202209241220559_Agriculture_rffgg.Designer.cs">
+      <DependentUpon>202209241220559_Agriculture_rffgg.cs</DependentUpon>
     </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
@@ -231,13 +233,14 @@
     <EmbeddedResource Include="AgricultureContextMigrations\202209240815192_Agriculture_RawMaterialStocDetailkExpireDate.resx">
       <DependentUpon>202209240815192_Agriculture_RawMaterialStocDetailkExpireDate.cs</DependentUpon>
     </EmbeddedResource>
-
     <EmbeddedResource Include="AgricultureContextMigrations\202209241120599_Agriculture_RawMaterialStockAddSupplierId.resx">
       <DependentUpon>202209241120599_Agriculture_RawMaterialStockAddSupplierId.cs</DependentUpon>
- </EmbeddedResource>
+    </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202209240824173_Agriculture_tblRawMaterialIssueStockInfo.resx">
       <DependentUpon>202209240824173_Agriculture_tblRawMaterialIssueStockInfo.cs</DependentUpon>
-
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202209241220559_Agriculture_rffgg.resx">
+      <DependentUpon>202209241220559_Agriculture_rffgg.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
