--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -154,6 +154,10 @@
     <Compile Include="AgricultureContextMigrations\202209241220559_Agriculture_rffgg.Designer.cs">
       <DependentUpon>202209241220559_Agriculture_rffgg.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202209260609487_Agriculture_UpdateTablesdsds.cs" />
+    <Compile Include="AgricultureContextMigrations\202209260609487_Agriculture_UpdateTablesdsds.Designer.cs">
+      <DependentUpon>202209260609487_Agriculture_UpdateTablesdsds.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -241,6 +245,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202209241220559_Agriculture_rffgg.resx">
       <DependentUpon>202209241220559_Agriculture_rffgg.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202209260609487_Agriculture_UpdateTablesdsds.resx">
+      <DependentUpon>202209260609487_Agriculture_UpdateTablesdsds.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
