--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -158,6 +158,10 @@
     <Compile Include="AgricultureContextMigrations\202209260609487_Agriculture_UpdateTablesdsds.Designer.cs">
       <DependentUpon>202209260609487_Agriculture_UpdateTablesdsds.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202209260625243_Agriculture_updatedd.cs" />
+    <Compile Include="AgricultureContextMigrations\202209260625243_Agriculture_updatedd.Designer.cs">
+      <DependentUpon>202209260625243_Agriculture_updatedd.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -248,6 +252,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202209260609487_Agriculture_UpdateTablesdsds.resx">
       <DependentUpon>202209260609487_Agriculture_UpdateTablesdsds.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202209260625243_Agriculture_updatedd.resx">
+      <DependentUpon>202209260625243_Agriculture_updatedd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
